# flatten-overlapping-ranges-rs

./: .travis.yml  Cargo.toml  readme.md
benches/: example.rs
src/: lib.rs
