[package]
name = "flatten_overlapping_ranges"
version = "0.1.0"
authors = ["Jannis R <mail@jannisr.de>"]
repository = "https://github.com/derhuerst/flatten-overlapping-ranges-rs.git"
homepage = "https://github.com/derhuerst/flatten-overlapping-ranges-rs"
license = "ISC"
readme = "README.md"
description = "Flatten overlapping ranges into a sequence of sections."
keywords = ["ranges", "overlap", "sections", "flatten", "intersect"]
exclude = [".travis.yml", "benches/*"]

[dependencies]

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "example"
harness = false

[badges]
travis-ci = { repository = "derhuerst/flatten-overlapping-ranges-rs" }
